# enterprise-rag-production

./: BUILD_SPEC.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  chunking-strategies.md
src/rag/: __init__.py  config.py  pipeline.py
src/rag/api/: main.py  middleware.py
src/rag/api/routes/: ingest.py  query.py
src/rag/chunking/: __init__.py  base.py  fixed.py  recursive.py  semantic.py
src/rag/embeddings/: __init__.py  base.py  local_embedder.py  openai_embedder.py
src/rag/evaluation/: __init__.py  dataset.py  harness.py  metrics.py
src/rag/generation/: __init__.py  base.py  openai_gen.py  prompt_templates.py
src/rag/ingestion/: __init__.py  loader.py  pipeline.py  preprocessor.py
src/rag/observability/: __init__.py  metrics.py  tracing.py
src/rag/retrieval/: __init__.py  context_builder.py  reranker.py  retriever.py
src/rag/vectorstore/: __init__.py  base.py  pgvector.py  pinecone.py  weaviate.py
